# ngfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
.clangd/index/: _fixes.hpp.27BC090DF9A47573.idx  _fixes.hpp.88052F27ED547321.idx  _vectorize.hpp.548B4BF35F33620B.idx  _vectorize.hpp.C6C7756B3D607EA8.idx  camera.hpp.3BC46ED608BDC776.idx  camera.hpp.BB80EB1F1BBDAFBE.idx  camera_array.cpp.8174F0BA41BDE589.idx  camera_array.cpp.E7F4886471344E4A.idx  camera_array.hpp.4702FEDF1B852DFB.idx  camera_array.hpp.FEB6AD13C26F81CB.idx  common.hpp.2D5FD22DF08526EF.idx  common.hpp.F85DAADCAEAA811F.idx  compute_common.hpp.406CDBE9D75EDF12.idx  compute_common.hpp.CF06A1B1B1388D7E.idx  compute_vector_relational.hpp.666DBF0FAC064385.idx  compute_vector_relational.hpp.9AE0CB3344D3FB01.idx  config.hpp.36178BFFBF6DD1B9.idx  config.hpp.9B75276A9593D4C4.idx  constants.hpp.850A54BE4C72C44F.idx  constants.hpp.855194EA47B278A1.idx  constants.inl.0FCE9B5E0493398A.idx  constants.inl.D1F980D7DACF1B7C.idx  context.c.30C1F272F0BF7B76.idx  context.c.F8F014B2C6FCA756.idx  context.cpp.557E03B1952A9BDE.idx  context.cpp.CCD8414FA7807473.idx  context.hpp.8EDA5993404D276E.idx  context.hpp.FCC79E981D5BDEE0.idx  egl_context.c.23F45A5AFD2E172C.idx  egl_context.c.253DA9137A3A8DDE.idx  egl_context.h.79E6DCE04AA54FBE.idx  egl_context.h.98F75870989E6CB4.idx  exponential.hpp.01642BFB6E9C15A7.idx  exponential.hpp.42757BD9BCA8ACF6.idx  fast_buffer.cpp.FB603F5C027AB76F.idx  fast_buffer.hpp.C871F6D5AE010084.idx  func_common.inl.3C713BE3C115D362.idx  func_common.inl.B2F370CB07897CFB.idx  func_exponential.inl.BC2794F68558B2BF.idx  func_exponential.inl.BD0BEC42881B47F0.idx  (+340 more)
lib/base/: CMakeLists.txt
lib/base/vks/: context.hpp  storage.hpp
lib/vma/: CMakeLists.txt
ngfx/: 3  CMakeCache.txt  CMakeLists.txt
ngfx/inc/: camera.hpp  camera_array.hpp  config.hpp  context.hpp  fast_buffer.hpp  mesh_table.hpp  ngfx.hpp  overlay.hpp  pipeline.hpp  scene.hpp  swap_data.hpp  test_renderer.hpp  util.hpp
ngfx/include/: asset.h  camera.hpp  env.h  geometries.hpp  math.hpp  shaders.hpp  species.h  util.h  utils.hpp
ngfx/shaders/: compile.sh  env.frag  env.vert  env_frag.spv  env_vert.spv  frag.spv  overlay.frag  overlay.vert  overlay_frag.spv  overlay_vert.spv  shader.frag  shader.vert  vert.spv
ngfx/src/: asset.cpp  camera_array.cpp  config.h  config.hpp  context.cpp  context.h  context.hpp  env.cpp  fast_buffer.cpp  g_buffer.cpp  input.hpp  main.cpp  math.cpp  ngfx.hpp  overlay.cpp  pipeline.cpp  scene.cpp  species.cpp  swap_data.cpp  util.cpp  util.h  util.hpp  utils.cpp  vk_mem_alloc.cpp
